[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributional-rl"
version = "0.1.0"
description = "Distributional return modeling and simple position sizing research utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "alpaca-py>=0.42.0",
  "ngboost>=0.5.0",
  "numpy>=1.24",
  "optuna>=3.6",
  "pandas>=2.0",
  "pyarrow>=15.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[tool.setuptools]
packages = ["src"]
